<resources>
    <string name="app_name">NatterChatAPP</string>
    <string name="natter_chat_application_logo">Natter Chat Application Logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="natter_app_icon">Natter App Icon</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="your_image_here">your image here</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>